
syntax = "proto3";


option csharp_namespace = "acmeat.server.order.client";

package order;

service GrpcOrder {
  rpc GetOrderById(Id)returns(Order);
  rpc GetOrders(Id) returns (OrderList);
  rpc GetOrdersByUserId(Id) returns (OrderList);
  rpc GetOrdersToPay(Id) returns (OrderList);
  rpc VerifyPayment(Payment) returns(GeneralResponse);
  rpc CreateOrder(Order) returns(GeneralResponse);
  rpc UpdateOrder(Order) returns (GeneralResponse);
  rpc DeleteOrder(Order) returns (GeneralResponse);
  rpc DeleteOrderById(Order) returns (GeneralResponse);
  rpc DeleteOrderForced(Order) returns (GeneralResponse);

  rpc HandleLocalAvailabilityResponse(LocalResponse) returns (GeneralResponse);

}



message Id{
  int32 id = 1;
}

message GeneralResponse{
  string message=1;
}

message LocalResponse{
  int32 OrderId = 1;
  string Reason =2;
}

message Order{
  int32 Id =1;
  int32 UserId =2;
  int32 LocalId =3;
    
  int32 DeliveryCompanyId =4;
  
  string DeliveryTime = 5;

  string PurchaseTime =6;

  int32 Price = 7;

  string TransactionId =8;

  int32 MenuId = 9;
  int32 Quantity = 10;
}

message OrderList {
  repeated Order orders=1;
}

message Payment{
  string TransactionId =1;
  int32 OrderId =2;
}